# WorkJsonCpp

./: .gitignore  CMakeLists.txt  main.cpp  parser.cpp
data/: TokenTable.json  ruless.jeson  test.json  test2.json
src/: readerJeson.cpp  reader_Json.cpp
src/json/: MetaObject.cpp  MetaObject.h  reader_Json.cpp  reader_Json.h
src/type/: Object.cpp  Vakue.cpp  Value.cpp  Value.h  ValueException.cpp  ValueException.h
src/utility/: Property.cpp  PropertyNum.cpp  PropertyNum.h  PropertyStr.cpp  PropertyStr.h
